<resources>
    <string name="app_name">UMentor</string>
    <string name="facebook_app_id">323491761410568</string>
    <string name="fb_login_protocol_scheme">fb323491761410568</string>
    <string name="edit_profile">EDIT</string>
    <string name="request_mentor">REQUEST</string>
    <string name="request_mentor_clicked">REQUEST SENT</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="name">Name</string>
    <string name="experience">Experience</string>

    <string name="message">Message</string>
    <string name="send_message_to_mentor">Send message</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="experience_years">Experience (yrs)</string>
    <string name="enter_years_of_experience">Enter years of experience</string>
    <string name="summary">Summary</string>
    <string name="categories">Categories</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="ok">OK</string>
    <string name="job">Job</string>
    <string name="yrs"> (yrs)</string>
    <string name="exp">Exp: </string>
    <string name="time_stamp">timeStamp</string>

    <!-- constants related strings -->
    <string name="accept_mentor_request"> has accepted your mentor request.</string>
    <string name="mentor_count">Mentor:</string>
    <string name="mentee_count">Mentee:</string>
    <string name="rating">Rating</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="divider">|</string>
    <string name="profile">Profile</string>
    <string name="mentors">Mentors</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="signout">Sign out</string>
    <string name="comma">,</string>


</resources>
