<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"
        android:title="@string/profile" />
    <item android:id="@+id/search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item android:id="@+id/mentors"
        app:showAsAction="ifRoom"
        android:icon="@drawable/mentor"
        android:title="@string/mentors" />
    <item android:id="@+id/messages"
        app:showAsAction="ifRoom"
        android:icon="@drawable/messages"
        android:title="@string/messages" />
    <item android:id="@+id/notifications"
        app:showAsAction="ifRoom"
        android:icon="@drawable/notification"
        android:title="@string/notifications" />
</menu>