<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:background="#1480a8">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@mipmap/ic_launcher"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/whiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentee_count"
                />
            <TextView
                style="@style/whiteText"
                android:paddingLeft="20dp"
                android:id="@+id/mentee_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/whiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentor_count"
                />
            <TextView
                style="@style/whiteText"
                android:paddingLeft="20dp"
                android:id="@+id/mentor_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/whiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                />
            <TextView
                style="@style/whiteText"
                android:paddingLeft="20dp"
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>